// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`projectDesiredSchema (golden) > projects ManyToMany join table 1`] = `
{
  "enums": [],
  "extensions": [],
  "schemas": [],
  "tables": [
    {
      "columnComments": {},
      "columns": [
        {
          "collation": null,
          "defaultExpr": "gen_random_uuid()",
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "id",
          "nullable": false,
          "pgType": "UUID",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "name",
          "nullable": false,
          "pgType": "TEXT",
        },
      ],
      "comment": null,
      "constraints": [
        {
          "checkExpr": null,
          "columns": [
            "id",
          ],
          "deferrable": false,
          "foreignColumns": null,
          "foreignSchema": null,
          "foreignTable": null,
          "initiallyDeferred": false,
          "name": "PgGoldCourse_pkey",
          "onDelete": null,
          "onUpdate": null,
          "type": "PRIMARY KEY",
        },
      ],
      "indexes": [],
      "name": "PgGoldCourse",
      "schema": "public",
      "triggers": [],
    },
    {
      "columnComments": {},
      "columns": [
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "pgGoldCourseId",
          "nullable": false,
          "pgType": "UUID",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "pgGoldStudentId",
          "nullable": false,
          "pgType": "UUID",
        },
      ],
      "comment": null,
      "constraints": [
        {
          "checkExpr": null,
          "columns": [
            "pgGoldCourseId",
            "pgGoldStudentId",
          ],
          "deferrable": false,
          "foreignColumns": null,
          "foreignSchema": null,
          "foreignTable": null,
          "initiallyDeferred": false,
          "name": "pg_gold_course_x_pg_gold_student_pkey",
          "onDelete": null,
          "onUpdate": null,
          "type": "PRIMARY KEY",
        },
        {
          "checkExpr": null,
          "columns": [
            "pgGoldCourseId",
          ],
          "deferrable": false,
          "foreignColumns": [
            "id",
          ],
          "foreignSchema": "public",
          "foreignTable": "PgGoldCourse",
          "initiallyDeferred": false,
          "name": "fk_CEYUMzx1fM9",
          "onDelete": "CASCADE",
          "onUpdate": "CASCADE",
          "type": "FOREIGN KEY",
        },
        {
          "checkExpr": null,
          "columns": [
            "pgGoldStudentId",
          ],
          "deferrable": false,
          "foreignColumns": [
            "id",
          ],
          "foreignSchema": "public",
          "foreignTable": "PgGoldStudent",
          "initiallyDeferred": false,
          "name": "fk_xhD-XYp3pVr",
          "onDelete": "CASCADE",
          "onUpdate": "CASCADE",
          "type": "FOREIGN KEY",
        },
      ],
      "indexes": [
        {
          "columns": [
            {
              "direction": "asc",
              "name": "pgGoldStudentId",
            },
          ],
          "concurrent": false,
          "include": null,
          "method": "btree",
          "name": "idx_xhD-XYp3pVr",
          "unique": false,
          "where": null,
        },
      ],
      "name": "pg_gold_course_x_pg_gold_student",
      "schema": "public",
      "triggers": [],
    },
    {
      "columnComments": {},
      "columns": [
        {
          "collation": null,
          "defaultExpr": "gen_random_uuid()",
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "id",
          "nullable": false,
          "pgType": "UUID",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "name",
          "nullable": false,
          "pgType": "TEXT",
        },
      ],
      "comment": null,
      "constraints": [
        {
          "checkExpr": null,
          "columns": [
            "id",
          ],
          "deferrable": false,
          "foreignColumns": null,
          "foreignSchema": null,
          "foreignTable": null,
          "initiallyDeferred": false,
          "name": "PgGoldStudent_pkey",
          "onDelete": null,
          "onUpdate": null,
          "type": "PRIMARY KEY",
        },
      ],
      "indexes": [],
      "name": "PgGoldStudent",
      "schema": "public",
      "triggers": [],
    },
  ],
}
`;

exports[`projectDesiredSchema (golden) > projects append-only triggers with guard function grouped into the first trigger 1`] = `
{
  "enums": [],
  "extensions": [],
  "schemas": [],
  "tables": [
    {
      "columnComments": {},
      "columns": [
        {
          "collation": null,
          "defaultExpr": "gen_random_uuid()",
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "id",
          "nullable": false,
          "pgType": "UUID",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "event",
          "nullable": false,
          "pgType": "TEXT",
        },
      ],
      "comment": null,
      "constraints": [
        {
          "checkExpr": null,
          "columns": [
            "id",
          ],
          "deferrable": false,
          "foreignColumns": null,
          "foreignSchema": null,
          "foreignTable": null,
          "initiallyDeferred": false,
          "name": "PgGoldLedger_pkey",
          "onDelete": null,
          "onUpdate": null,
          "type": "PRIMARY KEY",
        },
      ],
      "indexes": [],
      "name": "PgGoldLedger",
      "schema": "public",
      "triggers": [
        {
          "name": "proteus_append_only_no_update",
          "statements": [
            "CREATE OR REPLACE FUNCTION "public"."proteus_append_only_guard"()
RETURNS TRIGGER AS $$
BEGIN
  RAISE EXCEPTION 'append-only entity: % operations are forbidden on %.%',
    TG_OP, TG_TABLE_SCHEMA, TG_TABLE_NAME
    USING ERRCODE = 'restrict_violation';
  RETURN NULL;
END;
$$ LANGUAGE plpgsql IMMUTABLE;",
            "DROP TRIGGER IF EXISTS "proteus_append_only_no_update" ON "PgGoldLedger";",
            "CREATE TRIGGER "proteus_append_only_no_update"
  BEFORE UPDATE ON "PgGoldLedger"
  FOR EACH ROW EXECUTE FUNCTION "public"."proteus_append_only_guard"();",
          ],
        },
        {
          "name": "proteus_append_only_no_delete",
          "statements": [
            "DROP TRIGGER IF EXISTS "proteus_append_only_no_delete" ON "PgGoldLedger";",
            "CREATE TRIGGER "proteus_append_only_no_delete"
  BEFORE DELETE ON "PgGoldLedger"
  FOR EACH ROW EXECUTE FUNCTION "public"."proteus_append_only_guard"();",
          ],
        },
        {
          "name": "proteus_append_only_no_truncate",
          "statements": [
            "DROP TRIGGER IF EXISTS "proteus_append_only_no_truncate" ON "PgGoldLedger";",
            "CREATE TRIGGER "proteus_append_only_no_truncate"
  BEFORE TRUNCATE ON "PgGoldLedger"
  EXECUTE FUNCTION "public"."proteus_append_only_guard"();",
          ],
        },
      ],
    },
  ],
}
`;

exports[`projectDesiredSchema (golden) > projects embedded lists into collection tables with (parentFk, __ordinal) primary keys 1`] = `
{
  "enums": [
    {
      "name": "enum_pg_gold_user_addresses_status",
      "schema": "public",
      "values": [
        "active",
        "archived",
      ],
    },
  ],
  "extensions": [],
  "schemas": [],
  "tables": [
    {
      "columnComments": {},
      "columns": [
        {
          "collation": null,
          "defaultExpr": "gen_random_uuid()",
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "id",
          "nullable": false,
          "pgType": "UUID",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "name",
          "nullable": false,
          "pgType": "TEXT",
        },
      ],
      "comment": null,
      "constraints": [
        {
          "checkExpr": null,
          "columns": [
            "id",
          ],
          "deferrable": false,
          "foreignColumns": null,
          "foreignSchema": null,
          "foreignTable": null,
          "initiallyDeferred": false,
          "name": "PgGoldUser_pkey",
          "onDelete": null,
          "onUpdate": null,
          "type": "PRIMARY KEY",
        },
      ],
      "indexes": [],
      "name": "PgGoldUser",
      "schema": "public",
      "triggers": [],
    },
    {
      "columnComments": {},
      "columns": [
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "pg_gold_user_id",
          "nullable": false,
          "pgType": "UUID",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "__ordinal",
          "nullable": false,
          "pgType": "INTEGER",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "value",
          "nullable": false,
          "pgType": "TEXT",
        },
      ],
      "comment": null,
      "constraints": [
        {
          "checkExpr": null,
          "columns": [
            "pg_gold_user_id",
            "__ordinal",
          ],
          "deferrable": false,
          "foreignColumns": null,
          "foreignSchema": null,
          "foreignTable": null,
          "initiallyDeferred": false,
          "name": "pg_gold_user_tags_pkey",
          "onDelete": null,
          "onUpdate": null,
          "type": "PRIMARY KEY",
        },
        {
          "checkExpr": null,
          "columns": [
            "pg_gold_user_id",
          ],
          "deferrable": false,
          "foreignColumns": [
            "id",
          ],
          "foreignSchema": "public",
          "foreignTable": "PgGoldUser",
          "initiallyDeferred": false,
          "name": "fk_4-MIy_VRnvO",
          "onDelete": "CASCADE",
          "onUpdate": "CASCADE",
          "type": "FOREIGN KEY",
        },
      ],
      "indexes": [
        {
          "columns": [
            {
              "direction": "asc",
              "name": "pg_gold_user_id",
            },
          ],
          "concurrent": false,
          "include": null,
          "method": "btree",
          "name": "idx_4-MIy_VRnvO",
          "unique": false,
          "where": null,
        },
      ],
      "name": "pg_gold_user_tags",
      "schema": "public",
      "triggers": [],
    },
    {
      "columnComments": {},
      "columns": [
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "pg_gold_user_id",
          "nullable": false,
          "pgType": "UUID",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "__ordinal",
          "nullable": false,
          "pgType": "INTEGER",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "street",
          "nullable": false,
          "pgType": "TEXT",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "zip",
          "nullable": true,
          "pgType": "TEXT",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "status",
          "nullable": false,
          "pgType": ""enum_pg_gold_user_addresses_status"",
        },
      ],
      "comment": null,
      "constraints": [
        {
          "checkExpr": null,
          "columns": [
            "pg_gold_user_id",
            "__ordinal",
          ],
          "deferrable": false,
          "foreignColumns": null,
          "foreignSchema": null,
          "foreignTable": null,
          "initiallyDeferred": false,
          "name": "pg_gold_user_addresses_pkey",
          "onDelete": null,
          "onUpdate": null,
          "type": "PRIMARY KEY",
        },
        {
          "checkExpr": null,
          "columns": [
            "pg_gold_user_id",
          ],
          "deferrable": false,
          "foreignColumns": [
            "id",
          ],
          "foreignSchema": "public",
          "foreignTable": "PgGoldUser",
          "initiallyDeferred": false,
          "name": "fk_bPsphplOGtg",
          "onDelete": "CASCADE",
          "onUpdate": "CASCADE",
          "type": "FOREIGN KEY",
        },
      ],
      "indexes": [
        {
          "columns": [
            {
              "direction": "asc",
              "name": "pg_gold_user_id",
            },
          ],
          "concurrent": false,
          "include": null,
          "method": "btree",
          "name": "idx_bPsphplOGtg",
          "unique": false,
          "where": null,
        },
      ],
      "name": "pg_gold_user_addresses",
      "schema": "public",
      "triggers": [],
    },
  ],
}
`;

exports[`projectDesiredSchema (golden) > projects joined inheritance with inheritance FK ordered before uniques and checks 1`] = `
{
  "enums": [],
  "extensions": [],
  "schemas": [],
  "tables": [
    {
      "columnComments": {},
      "columns": [
        {
          "collation": null,
          "defaultExpr": "gen_random_uuid()",
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "id",
          "nullable": false,
          "pgType": "UUID",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "kind",
          "nullable": false,
          "pgType": "TEXT",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "name",
          "nullable": false,
          "pgType": "TEXT",
        },
      ],
      "comment": null,
      "constraints": [
        {
          "checkExpr": null,
          "columns": [
            "id",
          ],
          "deferrable": false,
          "foreignColumns": null,
          "foreignSchema": null,
          "foreignTable": null,
          "initiallyDeferred": false,
          "name": "PgGoldAnimal_pkey",
          "onDelete": null,
          "onUpdate": null,
          "type": "PRIMARY KEY",
        },
      ],
      "indexes": [
        {
          "columns": [
            {
              "direction": "asc",
              "name": "kind",
            },
          ],
          "concurrent": false,
          "include": null,
          "method": "btree",
          "name": "idx_X42zgTpa-jp",
          "unique": false,
          "where": null,
        },
      ],
      "name": "PgGoldAnimal",
      "schema": "public",
      "triggers": [],
    },
    {
      "columnComments": {},
      "columns": [
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "breed",
          "nullable": false,
          "pgType": "TEXT",
        },
        {
          "collation": null,
          "defaultExpr": "gen_random_uuid()",
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "id",
          "nullable": false,
          "pgType": "UUID",
        },
      ],
      "comment": null,
      "constraints": [
        {
          "checkExpr": null,
          "columns": [
            "id",
          ],
          "deferrable": false,
          "foreignColumns": null,
          "foreignSchema": null,
          "foreignTable": null,
          "initiallyDeferred": false,
          "name": "PgGoldDog_pkey",
          "onDelete": null,
          "onUpdate": null,
          "type": "PRIMARY KEY",
        },
        {
          "checkExpr": null,
          "columns": [
            "id",
          ],
          "deferrable": false,
          "foreignColumns": [
            "id",
          ],
          "foreignSchema": "public",
          "foreignTable": "PgGoldAnimal",
          "initiallyDeferred": false,
          "name": "fk__cBkoCIxzU5",
          "onDelete": "CASCADE",
          "onUpdate": "CASCADE",
          "type": "FOREIGN KEY",
        },
        {
          "checkExpr": null,
          "columns": [
            "breed",
          ],
          "deferrable": false,
          "foreignColumns": null,
          "foreignSchema": null,
          "foreignTable": null,
          "initiallyDeferred": false,
          "name": "unique_pg_gold_dog_breed",
          "onDelete": null,
          "onUpdate": null,
          "type": "UNIQUE",
        },
        {
          "checkExpr": "CHECK (length(breed) > 0)",
          "columns": [],
          "deferrable": false,
          "foreignColumns": null,
          "foreignSchema": null,
          "foreignTable": null,
          "initiallyDeferred": false,
          "name": "pg_gold_dog_breed_not_empty",
          "onDelete": null,
          "onUpdate": null,
          "type": "CHECK",
        },
      ],
      "indexes": [],
      "name": "PgGoldDog",
      "schema": "public",
      "triggers": [],
    },
  ],
}
`;

exports[`projectDesiredSchema (golden) > projects lindorm_id PK as bounded VARCHAR with FK column type equal to the PK 1`] = `
{
  "enums": [],
  "extensions": [],
  "schemas": [],
  "tables": [
    {
      "columnComments": {},
      "columns": [
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "id",
          "nullable": false,
          "pgType": "VARCHAR(31)",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "name",
          "nullable": false,
          "pgType": "TEXT",
        },
      ],
      "comment": null,
      "constraints": [
        {
          "checkExpr": null,
          "columns": [
            "id",
          ],
          "deferrable": false,
          "foreignColumns": null,
          "foreignSchema": null,
          "foreignTable": null,
          "initiallyDeferred": false,
          "name": "PgGoldLindormClient_pkey",
          "onDelete": null,
          "onUpdate": null,
          "type": "PRIMARY KEY",
        },
      ],
      "indexes": [],
      "name": "PgGoldLindormClient",
      "schema": "public",
      "triggers": [],
    },
    {
      "columnComments": {},
      "columns": [
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "id",
          "nullable": false,
          "pgType": "VARCHAR(24)",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "clientId",
          "nullable": false,
          "pgType": "VARCHAR(31)",
        },
      ],
      "comment": null,
      "constraints": [
        {
          "checkExpr": null,
          "columns": [
            "id",
          ],
          "deferrable": false,
          "foreignColumns": null,
          "foreignSchema": null,
          "foreignTable": null,
          "initiallyDeferred": false,
          "name": "PgGoldLindormToken_pkey",
          "onDelete": null,
          "onUpdate": null,
          "type": "PRIMARY KEY",
        },
        {
          "checkExpr": null,
          "columns": [
            "clientId",
          ],
          "deferrable": false,
          "foreignColumns": [
            "id",
          ],
          "foreignSchema": "public",
          "foreignTable": "PgGoldLindormClient",
          "initiallyDeferred": false,
          "name": "fk_uYJSyKzg-vg",
          "onDelete": "NO ACTION",
          "onUpdate": "NO ACTION",
          "type": "FOREIGN KEY",
        },
      ],
      "indexes": [],
      "name": "PgGoldLindormToken",
      "schema": "public",
      "triggers": [],
    },
  ],
}
`;

exports[`projectDesiredSchema (golden) > projects named enums, opclass and sparse indexes, deferrable relation, defaults, encrypted and typedJson fields 1`] = `
{
  "enums": [
    {
      "name": "enum_PgGoldKitchen_status",
      "schema": "public",
      "values": [
        "active",
        "archived",
      ],
    },
    {
      "name": "enum_PgGoldKitchen_state_col",
      "schema": "public",
      "values": [
        "active",
        "archived",
      ],
    },
  ],
  "extensions": [
    "pg_trgm",
  ],
  "schemas": [],
  "tables": [
    {
      "columnComments": {},
      "columns": [
        {
          "collation": null,
          "defaultExpr": "gen_random_uuid()",
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "id",
          "nullable": false,
          "pgType": "UUID",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "name",
          "nullable": false,
          "pgType": "TEXT",
        },
      ],
      "comment": null,
      "constraints": [
        {
          "checkExpr": null,
          "columns": [
            "id",
          ],
          "deferrable": false,
          "foreignColumns": null,
          "foreignSchema": null,
          "foreignTable": null,
          "initiallyDeferred": false,
          "name": "PgGoldOwner_pkey",
          "onDelete": null,
          "onUpdate": null,
          "type": "PRIMARY KEY",
        },
      ],
      "indexes": [],
      "name": "PgGoldOwner",
      "schema": "public",
      "triggers": [],
    },
    {
      "columnComments": {},
      "columns": [
        {
          "collation": null,
          "defaultExpr": "gen_random_uuid()",
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "id",
          "nullable": false,
          "pgType": "UUID",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "status",
          "nullable": false,
          "pgType": ""enum_PgGoldKitchen_status"",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "state_col",
          "nullable": false,
          "pgType": ""enum_PgGoldKitchen_state_col"",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "searchText",
          "nullable": false,
          "pgType": "TEXT",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "region",
          "nullable": true,
          "pgType": "TEXT",
        },
        {
          "collation": null,
          "defaultExpr": "true",
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "isActive",
          "nullable": false,
          "pgType": "BOOLEAN",
        },
        {
          "collation": null,
          "defaultExpr": "'draft'",
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "stage",
          "nullable": false,
          "pgType": "TEXT",
        },
        {
          "collation": null,
          "defaultExpr": "42",
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "priority",
          "nullable": false,
          "pgType": "INTEGER",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "secret",
          "nullable": false,
          "pgType": "text",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "payload",
          "nullable": false,
          "pgType": "JSONB",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "payload__typemeta",
          "nullable": true,
          "pgType": "JSONB",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "ownerId",
          "nullable": false,
          "pgType": "UUID",
        },
      ],
      "comment": null,
      "constraints": [
        {
          "checkExpr": null,
          "columns": [
            "id",
          ],
          "deferrable": false,
          "foreignColumns": null,
          "foreignSchema": null,
          "foreignTable": null,
          "initiallyDeferred": false,
          "name": "PgGoldKitchen_pkey",
          "onDelete": null,
          "onUpdate": null,
          "type": "PRIMARY KEY",
        },
        {
          "checkExpr": null,
          "columns": [
            "ownerId",
          ],
          "deferrable": true,
          "foreignColumns": [
            "id",
          ],
          "foreignSchema": "public",
          "foreignTable": "PgGoldOwner",
          "initiallyDeferred": true,
          "name": "fk_-Dxj3ZqiIC-",
          "onDelete": "SET NULL",
          "onUpdate": "CASCADE",
          "type": "FOREIGN KEY",
        },
      ],
      "indexes": [
        {
          "columns": [
            {
              "direction": "asc",
              "name": "searchText",
              "opclass": "gin_trgm_ops",
            },
          ],
          "concurrent": false,
          "include": null,
          "method": "gin",
          "name": "pg_gold_kitchen_trgm",
          "unique": false,
          "where": null,
        },
        {
          "columns": [
            {
              "direction": "asc",
              "name": "region",
              "opclass": null,
            },
          ],
          "concurrent": false,
          "include": null,
          "method": "btree",
          "name": "idx_FGDmUvbrSXw",
          "unique": false,
          "where": ""region" IS NOT NULL",
        },
      ],
      "name": "PgGoldKitchen",
      "schema": "public",
      "triggers": [],
    },
  ],
}
`;

exports[`projectDesiredSchema (golden) > projects namespaced entities with schema-qualified tables and enums 1`] = `
{
  "enums": [
    {
      "name": "enum_PgGoldScoped_status",
      "schema": "analytics",
      "values": [
        "active",
        "archived",
      ],
    },
  ],
  "extensions": [],
  "schemas": [
    "analytics",
  ],
  "tables": [
    {
      "columnComments": {},
      "columns": [
        {
          "collation": null,
          "defaultExpr": "gen_random_uuid()",
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "id",
          "nullable": false,
          "pgType": "UUID",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "status",
          "nullable": false,
          "pgType": ""analytics"."enum_PgGoldScoped_status"",
        },
      ],
      "comment": null,
      "constraints": [
        {
          "checkExpr": null,
          "columns": [
            "id",
          ],
          "deferrable": false,
          "foreignColumns": null,
          "foreignSchema": null,
          "foreignTable": null,
          "initiallyDeferred": false,
          "name": "PgGoldScoped_pkey",
          "onDelete": null,
          "onUpdate": null,
          "type": "PRIMARY KEY",
        },
      ],
      "indexes": [],
      "name": "PgGoldScoped",
      "schema": "analytics",
      "triggers": [],
    },
  ],
}
`;

exports[`projectDesiredSchema (golden) > projects single-table inheritance with discriminator index on the root table 1`] = `
{
  "enums": [],
  "extensions": [],
  "schemas": [],
  "tables": [
    {
      "columnComments": {},
      "columns": [
        {
          "collation": null,
          "defaultExpr": "gen_random_uuid()",
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "id",
          "nullable": false,
          "pgType": "UUID",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "kind",
          "nullable": false,
          "pgType": "TEXT",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "make",
          "nullable": false,
          "pgType": "TEXT",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "seatCount",
          "nullable": true,
          "pgType": "INTEGER",
        },
        {
          "collation": null,
          "defaultExpr": null,
          "generationExpr": null,
          "identityGeneration": null,
          "isGenerated": false,
          "isIdentity": false,
          "name": "payloadCapacity",
          "nullable": true,
          "pgType": "DOUBLE PRECISION",
        },
      ],
      "comment": null,
      "constraints": [
        {
          "checkExpr": null,
          "columns": [
            "id",
          ],
          "deferrable": false,
          "foreignColumns": null,
          "foreignSchema": null,
          "foreignTable": null,
          "initiallyDeferred": false,
          "name": "PgGoldVehicle_pkey",
          "onDelete": null,
          "onUpdate": null,
          "type": "PRIMARY KEY",
        },
      ],
      "indexes": [
        {
          "columns": [
            {
              "direction": "asc",
              "name": "kind",
            },
          ],
          "concurrent": false,
          "include": null,
          "method": "btree",
          "name": "idx_luRGzNmrNti",
          "unique": false,
          "where": null,
        },
      ],
      "name": "PgGoldVehicle",
      "schema": "public",
      "triggers": [],
    },
  ],
}
`;
